--- a/Backend/package.json
+++ b/Backend/package.json
@@ -5,16 +5,20 @@
   "description": "",
   "main": "src/server.js",
   "scripts": {
-    "start": "node src/server.js" ,
+    "start": "node src/server.js",
     "dev": "nodemon src/server.js"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "bcrypt": "^6.0.0",
+    "bcryptjs": "^3.0.3",
+    "cookie-parser": "^1.4.7",
     "cors": "^2.8.6",
     "dotenv": "^17.2.3",
     "express": "^5.2.1",
+    "jsonwebtoken": "^9.0.3",
     "mongoose": "^9.1.5",
     "nodemon": "^3.1.11"
   }
